--- a/html/template/default/yasai-bus/css/style.css
+++ b/html/template/default/yasai-bus/css/style.css
@@ -2503,12 +2503,12 @@ input[readonly], textarea[readonly] {
     }
 }
 
-/* Home transaction */
-.transaction-section, .delivery-section {
+/* Home transaction, delivery, complete */
+.transaction-section, .delivery-section, .complete-section {
     display: none;
 }
 
-.transaction-section, .delivery-section {
+.transaction-section, .delivery-section, .complete-section {
     background-color: #f7f7f7;
     padding-top: 20px;
     margin-top: 10px;
@@ -2521,7 +2521,7 @@ input[readonly], textarea[readonly] {
     margin: 10px auto;
     font-weight: bold;
 }
-.transaction-section .trans-detail, .delivery-section .delivery-detail {
+.transaction-section .trans-detail, .delivery-section .delivery-detail, .complete-section .complete-detail {
     height: 99px;
     border-radius: 3px;
     background-color: #ffffff;
