--- a/src/Eccube/Resource/template/default/Farm/farm_home.twig
+++ b/src/Eccube/Resource/template/default/Farm/farm_home.twig
@@ -75,6 +75,11 @@
                 $(this).addClass('enable').removeClass('disable');
                 $('.'+$class).show();
             });
+
+            var is_complete = '{{ app.request.get('complete') }}';
+            if (is_complete) {
+                $('#complete-section').click();
+            }
         });
     </script>
 {% endblock %}
@@ -223,6 +228,57 @@
                             <p>
                                 <span class="title12 display-block">取引中の商品はありません</span>
                                 <span class="title12">商品が購入されると、ここに並びます</span>
+                            </p>
+                        </div>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+
+        <div class="complete-section">
+            <div class="row">
+                <div class="col-sm-12 col-xs-12">
+                    <form name="form1" id="form1" method="get" action="?">
+                        <input type="hidden" name="complete" value="1">
+                        {{ form_widget(formOrderBy.order_by, {attr: {'class': 'select margin-bottom15', 'onchange': 'javascript:this.form.submit();'}}) }}
+                    </form>
+
+                    {% if OrderComplete|length > 0 %}
+                        {% for Order in OrderComplete %}
+                            <div class="complete-detail clearfix height141">
+                                <div class="clearfix">
+                                    <div class="order-detail-profile float-left">
+                                        <p class="title15 width120">
+                                            {{ Order.name01 }}{{ Order.name02 }}
+                                        </p>
+                                        {% for OrderDetail in Order.OrderDetails %}
+                                            {% set Product = OrderDetail.Product %}
+                                            <img class="image-review order-profile" src="{{ app.config.image_save_urlpath }}/{{ Product.main_list_image|no_image_product }}">
+                                        {% endfor %}
+                                    </div>
+                                    <div class="float-right arrow-right">
+                                        <a href="{{ url('order', {'id': Order.id}) }}">
+                                            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png" class="margin-top30">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="order-detail-info">
+                                <div class="float-left">
+                                    <p>
+                                        <span class="color888 margin-right10">出荷日</span>
+                                        <span>{{ Order.commit_date|date_format }}</span>
+                                        <span class="color888 margin-right10 margin-left60">合計</span>
+                                        <span>{{ Order.total|price }}</span>
+                                    </p>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    {% else %}
+                        <div class="fav-empty">
+                            <p>
+                                <span class="title12 display-block">取引が終了した商品はありません</span>
+                                <span class="title12">出荷した商品が受け取られると、ここに並びます</span>
                             </p>
                         </div>
                     {% endif %}
