Move contact page

--- a/src/Eccube/Resource/template/default/Farm/farm_profile_edit.twig
+++ b/src/Eccube/Resource/template/default/Farm/farm_profile_edit.twig
@@ -378,8 +378,8 @@
                 <li class="list-group-item"><a href="#">過去の出品</a></li>
                 <li class="list-group-item"><a href="#"><span>お知らせ</span><span class="li-active">&#x25CF;</span></a></li>
                 <li class="list-group-item" id="setting"><a href="#">設定</a></li>
-                <li class="list-group-item"><a href="{{ url('farm_contact') }}">お問い合わせ</a></li>
-                <li class="list-group-item"><a href="{{ url('farm_guide') }}">ガイド</a></li>
+                <li class="list-group-item"><a href="{{ url('contact') }}">お問い合わせ</a></li>
+                <li class="list-group-item"><a href="{{ url('help_guide') }}">ガイド</a></li>
             </ul>
 
             <ul class="list-group hidden" id="setting-menu">
