--- a/src/Eccube/Resource/template/default/Block/new_footer.twig
+++ b/src/Eccube/Resource/template/default/Block/new_footer.twig
@@ -2,7 +2,7 @@
     <ul>
         <li><a href="#">やさいバスについて</a></li>
         <li><a href="{{ url('help_privacy') }}">プライバシーポリシー</a></li>
-        <li><a href="{{ url('farm_contact') }}">お問い合わせ</a></li>
+        <li><a href="{{ url('contact') }}">お問い合わせ</a></li>
         <li><a href="{{ url('help_agreement') }}">利用規約</a></li>
         <li><a href="#">運営会社</a></li>
     </ul>
