--- a/src/Eccube/Resource/template/default/Help/guide.twig
+++ b/src/Eccube/Resource/template/default/Help/guide.twig
@@ -1,41 +1,91 @@
 {#
-This file is part of EC-CUBE
+ # Created by PhpStorm.
+ # User: lqdung1992@gmail.com
+ # Date: 02/11/2018
+ # Time: 11:00
+ #}
 
-Copyright(c) 2000-2015 LOCKON CO.,LTD. All Rights Reserved.
-
-http://www.lockon.co.jp/
-
-This program is free software; you can redistribute it and/or
-modify it under the terms of the GNU General Public License
-as published by the Free Software Foundation; either version 2
-of the License, or (at your option) any later version.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with this program; if not, write to the Free Software
-Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
-#}
 {% extends 'default_frame.twig' %}
+{% set body_class = ' ' %}
+{% block stylesheet %}
+    <style type="text/css">
+        #receiver-form {
+            min-height: 700px;
+        }
+    </style>
+{% endblock stylesheet %}
 
+{% block javascript %}
+{% endblock %}
 {% block main %}
-    <div id="contents" class="main_only">
-        <div id="guide_wrap" class="container-fluid inner no-padding">
-            <div id="main">
-                <h1 class="page-heading">ご利用ガイド</h1>
-                <div id="guide_box__body"  class="container-fluid">
-                    <div id="guide_box__body_inner" class="row">
-                        <div id="guide_box__body_item" class="col-md-10 col-md-offset-1">
+    <div class="wrapper container" id="receiver-form">
+        <div class="farmer-new-header">
+            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-menu.svg" class="hambuger-menu-reicever">
+            <a href="{{ url('farm_home', {'id': TargetCustomer.id} ) }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-home.svg" class="nav-home"></a>
+            <a href="{{ url('top') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="logo-svg"></a>
+        </div>
 
+        <div class="col-sm-12 col-xs-12 Rectangle-12">
+            <p class="guide-title">やさいバスとは何ですか？</p>
+            <p class="guide-content">当社が扱う食材はすべて、誰がどこでどのように作っているか明確に説明できるものだけ。しかも、レストラン等プロ向けに提供することを主としてきましたので、味にも自信があるものを取り扱っています。ちょっとしたパーティの食材やご贈答用、現場のわかる食材を使いたいご家庭用として、ご利用ください。決済はAmazonを使っておりますが、商品は当社が責任もってお届けいたします。本サイトよりご購入ください。また、業務向けとしまして、料理人の方、会社の福利厚生用にも商品を組むことが可能です。</p>
+        </div>
 
-                        </div><!-- /.col -->
-                    </div><!-- /.row -->
+        <div class="col-sm-12 col-xs-12 Rectangle-12">
+            <p class="guide-title">やさいバスとは何ですか？</p>
+            <p class="guide-content">当社が扱う食材はすべて、誰がどこでどのように作っているか明確に説明できるものだけ。しかも、レストラン等プロ向けに提供することを主としてきましたので、味にも自信があるものを取り扱っています。ちょっとしたパーティの食材やご贈答用、現場のわかる食材を使いたいご家庭用として、ご利用ください。決済はAmazonを使っておりますが、商品は当社が責任もってお届けいたします。本サイトよりご購入ください。また、業務向けとしまして、料理人の方、会社の福利厚生用にも商品を組むことが可能です。</p>
+        </div>
 
-                </div>
-            </div>
+    </div>
+
+    <div id="reicever-menu-wrapper" class="menu-wrapper hidden">
+        <div class="Rectangle">
+            <ul class="list-group" id="main-menu">
+                <li class="list-group-item li-profile">
+                    <img id="upload-image" src="{{ app.config.image_save_urlpath }}/{{ TargetCustomer.profile_image|no_image_product }}" alt="profile" class="img-circle small-profile">
+                    <span class="profile-name">{{ TargetCustomer.__toString }}</span>
+                    <span class="button-x">X</span>
+                </li>
+                <li class="list-group-item"><a href="{{ url('farm_profile', {'id': TargetCustomer.id} ) }}">プロフィール</a></li>
+                <li class="list-group-item"><a href="#">過去の出品</a></li>
+                <li class="list-group-item"><a href="#"><span>お知らせ</span><span class="li-active">&#x25CF;</span></a></li>
+                <li class="list-group-item" id="setting"><a href="#">設定</a></li>
+                <li class="list-group-item"><a href="{{ url('contact') }}">お問い合わせ</a></li>
+                <li class="list-group-item"><a href="{{ url('help_guide') }}">ガイド</a></li>
+            </ul>
+
+            <ul class="list-group hidden" id="setting-menu">
+                <li class="list-group-item li-profile">
+                    <img id="upload-image" src="{{ app.config.image_save_urlpath }}/{{ TargetCustomer.profile_image|no_image_product }}" alt="profile" class="img-circle small-profile">
+                    <span class="profile-name">{{ TargetCustomer.__toString }}</span>
+                    <span class="button-x">X</span>
+                </li>
+                <li class="list-group-item">
+                    <a href="{{ url('farm_service_profile_setting') }}">
+                        登録者名・住所・電話番号
+                        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png" class="float-right margin-top5">
+                    </a>
+
+                </li>
+                <li class="list-group-item">
+                    <a href="{{ url('farm_farmer_password_change') }}">
+                        メールアドレス・パスワード
+                        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png" class="float-right margin-top5">
+                    </a>
+                </li>
+                <li class="list-group-item">
+                    <a href="#">
+                        指定購入者への割引設定
+                        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png" class="float-right margin-top5">
+                    </a>
+
+                </li>
+                <li class="list-group-item">
+                    <a href="#">
+                        やさいバスについて
+                        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png" class="float-right margin-top5">
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
 {% endblock %}
