--- a/src/Eccube/Resource/template/default/Farm/farm_profile.twig
+++ b/src/Eccube/Resource/template/default/Farm/farm_profile.twig
@@ -124,7 +124,7 @@
 
         <div id="service-form">
             <div class="farmer-profile">
-                {% if TargetCustomer.CustomerImage %}
+                {% if TargetCustomer.CustomerImage|length > 0 %}
                     <div id="myCarousel" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             {% for image in TargetCustomer.CustomerImage %}
@@ -152,7 +152,9 @@
 
             <div id="receiver-profile" class="clearfix">
                 <div class="col-sm-12 col-xs-12">
+                    {% if is_granted("IS_AUTHENTICATED_FULLY") and app.user.id == TargetCustomer.id %}
                     <a href="{{ url('farm_profile_edit') }}"><button class="btn btn-success float-right farmer-follow-btn">編集</button></a>
+                        {% endif %}
                     {% set img = app.config.front_urlpath ~ '/yasai-bus/img/camera.PNG' %}
                     {% if TargetCustomer.profile_image %}
                         {% set img = app.config.image_save_urlpath ~'/'~ TargetCustomer.profile_image %}
@@ -183,62 +185,22 @@
             <div class="product-section row">
                 <div class="col-sm-12 col-xs-12">
                     <div class="row">
+                        {% for Product in Products %}
                         <div class="col-sm-4 col-xs-6">
                             <div class="thumbnail">
-                                <img src="{{ app.config.front_urlpath }}/yasai-bus/img/farmer1.PNG" alt="...">
+                                <img src="{{ app.config.image_save_urlpath }}/{{ Product.MainListImage|no_image_product }}" alt="...">
                                 <div class="caption">
-                                    <h5 class="font-weight mg10">プチぷよトマト</h5>
-                                    <h5 class="font-weight mg20">1000円 &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp 5kg箱</h5>
+                                    <h5 class="font-weight mg10">{{ Product.name }}</h5>
+                                    <h5 class="font-weight mg20">{{ Product.getPrice02IncTaxMin|price }} &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp {{ Product.getAmountFollowPrice02Min }}{{ Product.getAmountUnitTypeFollowPrice02Min.name }}</h5>
                                     <p>
-                                        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/profile-icon.PNG" alt="profile" class="img-circle small-profile">
-                                        <span class="profile-name">高橋農園</span>
-                                        <span class="profile-address">静岡県静岡市青青水区</span>
+                                        <img src="{{ app.config.image_save_urlpath }}/{{ TargetCustomer.profile_image|no_image_product }}" alt="profile" class="img-circle small-profile">
+                                        <span class="profile-name">{{ TargetCustomer.__toString }}</span>
+                                        <span class="profile-address">{{ TargetCustomer.Pref.name }}{{ TargetCustomer.addr01 }}{{ TargetCustomer.addr02 }}</span>
                                     </p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-4 col-xs-6">
-                            <div class="thumbnail">
-                                <img src="{{ app.config.front_urlpath }}/yasai-bus/img/farmer2.PNG" alt="...">
-                                <div class="caption">
-                                    <h5 class="font-weight mg10">ヤングコーン</h5>
-                                    <h5 class="font-weight mg20">1000円 &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp 1箱</h5>
-                                    <p>
-                                        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/profile-icon.PNG" alt="profile" class="img-circle small-profile">
-                                        <span class="profile-name">高橋農園</span>
-                                        <span class="profile-address">静岡県静岡市青青水区</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4 col-xs-6">
-                            <div class="thumbnail">
-                                <img src="{{ app.config.front_urlpath }}/yasai-bus/img/farmer1.PNG" alt="...">
-                                <div class="caption">
-                                    <h5 class="font-weight mg10">プチぷよトマト</h5>
-                                    <h5 class="font-weight mg20">1000円 &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp 1箱</h5>
-                                    <p>
-                                        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/profile-icon.PNG" alt="profile" class="img-circle small-profile">
-                                        <span class="profile-name">高橋農園</span>
-                                        <span class="profile-address">静岡県静岡市青青水区</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4 col-xs-6">
-                            <div class="thumbnail">
-                                <img src="{{ app.config.front_urlpath }}/yasai-bus/img/farmer2.PNG" alt="...">
-                                <div class="caption">
-                                    <h5 class="font-weight mg10">ヤングコーン</h5>
-                                    <h5 class="font-weight mg20">1000円 &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp 1箱</h5>
-                                    <p>
-                                        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/profile-icon.PNG" alt="profile" class="img-circle small-profile">
-                                        <span class="profile-name">高橋農園</span>
-                                        <span class="profile-address">静岡県静岡市青青水区</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
