--- a/html/template/default/yasai-bus/css/style.css
+++ b/html/template/default/yasai-bus/css/style.css
@@ -308,7 +308,7 @@ body {
 
 #reicever-menu-wrapper {
     background-color: #c3c3c3;
-    height: 600px;
+    /*height: 600px;*/
 }
 
 .btn-success {
