--- a/html/template/default/yasai-bus/css/style.css
+++ b/html/template/default/yasai-bus/css/style.css
@@ -222,10 +222,6 @@ body {
     color: #888888;
 }
 
-.Rectangle-8 {
-    margin-left: 12px;
-}
-
 .pagination {
     margin-left: 60px !important;
 }
@@ -318,13 +314,6 @@ body {
 img {
     cursor: pointer;
 }
-
-.thumb-image {
-    padding: 15px;
-    margin-left: 15%;
-    margin-bottom: 15px;
-}
-
 
 #profile-description {
     width: 345px;
@@ -1529,8 +1518,8 @@ img {
 
 .tag-done {
     position: absolute;
-    top: 1.4%;
-    left: 2%;
+    top: 4px;
+    left: 4px;
 }
 
 .Rectangle-12 {
