--- a/src/Eccube/Resource/template/default/Farm/history.twig
+++ b/src/Eccube/Resource/template/default/Farm/history.twig
@@ -14,11 +14,10 @@
         <div id="reicever-profile-farmer" class="wrapper">
             <div class="row">
                 <div class="col-sm-12 col-xs-12">
-                    {% for Order in history %}
-                        {% set Product = Order.OrderDetails[0].Product %}
+                    {% for Product in history %}
                         {% set TargetCustomer = Product.Creator %}
                         <div class="col-sm-3 col-xs-6 thumbnail">
-                            <a href="{{ url('farm_history_detail', {'id': Order.id} ) }}"><img src="{{ app.config.image_save_urlpath }}/{{ Product.main_list_image|no_image_product }}" alt="no image"></a>
+                            <a href="{{ url('farm_history_detail', {'id': Product.id} ) }}"><img src="{{ app.config.image_save_urlpath }}/{{ Product.main_list_image|no_image_product }}" alt="no image"></a>
                             <div class="caption">
                                 <h5 class="font-weight mg10">{{ Product.name }}</h5>
                                 <div class="mg20">
