--- a/src/Eccube/Resource/template/default/Driver/driver_detail_cargo.twig
+++ b/src/Eccube/Resource/template/default/Driver/driver_detail_cargo.twig
@@ -238,7 +238,7 @@
                     {#<span class="profile-name">{{ TargetCustomer.__toString }}</span>#}
                     {#<span class="button-x">X</span>#}
                 </li>
-                <li class="list-group-item"><a href="{{ url('farm_contact') }}">お問い合わせ</a></li>
+                <li class="list-group-item"><a href="{{ url('contact') }}">お問い合わせ</a></li>
             </ul>
         </div>
     </div>
