--- a/src/Eccube/Resource/template/default/Mypage/login.twig
+++ b/src/Eccube/Resource/template/default/Mypage/login.twig
@@ -26,7 +26,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 {% block main %}
     <div class="wrapper">
         <div class="farmer-header">
-            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10">
+            <a href="{{ url('top') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10"></a>
         </div>
 
         <div id="service-form">
