--- a/src/Eccube/Resource/template/default/Order/pickup.twig
+++ b/src/Eccube/Resource/template/default/Order/pickup.twig
@@ -56,7 +56,7 @@
             </div>
         </div>
 
-        <p class="float-right margin-right13"><a class="color888 title11" href="#">商品の出荷が難しい場合</a></p>
+        <p class="float-right margin-right13"><a class="color888 title11" href="{{ url('contact') }}" target="_blank">商品の出荷が難しい場合</a></p>
 
         <div id="cart-confirm-main">
             <div class="cart-content" id="cart-main-content3">
