add menu setting

--- a/src/Eccube/Resource/template/default/Farm/farm_home.twig
+++ b/src/Eccube/Resource/template/default/Farm/farm_home.twig
@@ -29,7 +29,7 @@
             }
         }
 
-        .transaction-section, .delivery-section, .complete-section {
+        .product-section, .transaction-section, .delivery-section, .complete-section {
             min-height: 520px;
         }
     </style>
