--- a/src/Eccube/Resource/template/default/Farm/service_profile.twig
+++ b/src/Eccube/Resource/template/default/Farm/service_profile.twig
@@ -59,6 +59,9 @@
 {% endblock %}
 {% block main %}
     <div class="wrapper" id="service-regist-receiver-wrapper">
+        <div class="farmer-header">
+            <a href="{{ url('top') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10"></a>
+        </div>
         <div class="backgroundf7f7f7" id="service-regist">
             <form id="service-form" method="post" action="{{ url('farm_service_profile') }}" enctype="multipart/form-data">
                 {{ form_widget(form._token) }}
