--- a/src/Eccube/Resource/template/default/Farm/service_register.twig
+++ b/src/Eccube/Resource/template/default/Farm/service_register.twig
@@ -11,7 +11,10 @@
 {% endblock %}
 {% block main %}
     <div class="wrapper" id="service-regist-receiver-wrapper">
-        <div id="service-wrapper">
+        <div class="farmer-header">
+            <a href="{{ url('top') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10"></a>
+        </div>
+        <div id="service-wrapper" style="min-height: 1050px;">
             <form id="service-form" method="post" action="{{ url('farm_service') }}">
                 <input type="hidden" name="mode" value="complete"/>
                 {{ form_widget(form._token) }}
