--- a/src/Eccube/Resource/template/default/Farm/service_signup.twig
+++ b/src/Eccube/Resource/template/default/Farm/service_signup.twig
@@ -17,6 +17,9 @@
         }
     </style>
     <div class="wrapper" id="service-regist-receiver-wrapper">
+        <div class="farmer-header">
+            <a href="{{ url('top') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="margin-top10"></a>
+        </div>
         <div id="service-wrapper" class="row">
             <p class="title12">やさいバスは現在、静岡県内の方のみ</p>
             <p class="title12">利用申請を受け付けております</p>
