--- a/src/Eccube/Resource/template/default/Farm/farm_profile.twig
+++ b/src/Eccube/Resource/template/default/Farm/farm_profile.twig
@@ -182,7 +182,7 @@
                         {% for Product in Products %}
                         <div class="col-sm-4 col-xs-6">
                             <div class="thumbnail">
-                                <img src="{{ app.config.image_save_urlpath }}/{{ Product.MainListImage|no_image_product }}" alt="...">
+                                <a href="{{ url('farm_item_detail', {'id': Product.id} ) }}"><img src="{{ app.config.image_save_urlpath }}/{{ Product.MainListImage|no_image_product }}" alt="..."></a>
                                 <div class="caption">
                                     <h5 class="font-weight mg10">{{ Product.name }}</h5>
                                     <h5 class="font-weight mg20">{{ Product.getPrice02IncTaxMin|price }} &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp {{ Product.getAmountFollowPrice02Min }}{{ Product.getAmountUnitTypeFollowPrice02Min.name }}</h5>
