--- a/src/Eccube/Resource/template/default/Farm/service_signup.twig
+++ b/src/Eccube/Resource/template/default/Farm/service_signup.twig
@@ -40,7 +40,7 @@
                     <div class="form-group">
                         {{ form_label(form.company_name) }}
                         {{ form_errors(form.company_name) }}
-                        {{ form_widget(form.company_name, {'attr': {'placeholder' : '静岡県'}}) }}
+                        {{ form_widget(form.company_name) }}
                     </div>
                 </div>
 
