--- a/html/template/default/yasai-bus/css/style.css
+++ b/html/template/default/yasai-bus/css/style.css
@@ -2518,3 +2518,18 @@ input[readonly], textarea[readonly] {
     margin: auto;
     margin-bottom: 15px;
 }
+span.required {
+    display: inline-block;
+    min-width: 10px;
+    padding: 3px 7px;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    border-radius: 10px;
+    background-color: #c94242 !important;
+    margin-left: 5px;
+}
