--- a/src/Eccube/Resource/template/default/Farm/farm_item_detail.twig
+++ b/src/Eccube/Resource/template/default/Farm/farm_item_detail.twig
@@ -101,6 +101,43 @@
                     return '<button class="thumbnail">' + $(slider.$slides[i]).find('img').prop('outerHTML') + '</button>';
                 }
             });
+
+            // reset modal
+            $('.modal').on('hidden.bs.modal', function(){
+                $(this).find('form')[0].reset();
+                $('.modal-price').text(0);
+            });
+
+            var defaultPrice = '{{ Product.getPrice02IncTaxMin }}';
+
+            $(".plus").on("click", function() {
+                var $button = $(this);
+                var inputMax = $button.parent().find("input").attr('max');
+                var oldValue = $button.parent().find("input").val();
+                var newVal = parseInt(oldValue) + 1;
+                if (newVal > inputMax) {
+                    return;
+                }
+                var priceSpan = $button.parent().parent().find(".count-price").find("span");
+                var priceNew = defaultPrice * newVal;
+                priceSpan.text(priceNew);
+                $button.parent().find("input").val(newVal);
+            });
+
+            $(".minus").on("click", function() {
+                var $button = $(this);
+                var oldValue = $button.parent().find("input").val();
+
+                if (oldValue > 0) {
+                    var newVal = parseInt(oldValue) - 1;
+                } else return false;
+
+                var priceSpan = $button.parent().parent().find(".count-price").find("span");
+                var priceOld = parseInt(priceSpan.text());
+                var priceNew = defaultPrice * newVal;
+                priceSpan.text(priceNew);
+                $button.parent().find("input").val(newVal);
+            });
         });
     </script>
 {% endblock %}
@@ -153,17 +190,11 @@
                             </div>
                             <div class="float-right">
                             {% if is_granted("IS_AUTHENTICATED_FULLY") and app.user.id == TargetCustomer.id %}
-                                <a href="#" id="farmer-button-confirm" class="btn btn-success margin-top15 background344250 order_again">注文数の確認</a>
+                                <a href="#" data-toggle="modal" data-target="#cartModal" class="btn btn-success margin-top15 background344250 order_again">注文数の確認</a>
                                 <a href="{{ url('farm_item_edit', {'id': Product.id}) }}" id="farmer-button-edit" class="btn btn-success margin-top15">編集</a>
                             {% elseif is_granted("ROLE_RECIPIENT") %}
-                                <form method="post" action="?" id="add-cart-form" name="add-cart-form">
-                                    <input type="hidden" name="mode" value="add_cart"/>
-                                    {{ form_widget(cartForm._token) }}
-                                    <input type="hidden" name="product_class_id" id="product_class_id" value="{{ Product.getProductClasses[0].id }}">
-                                    <input type="hidden" name="quantity" id="quantity" value="1">
-                                    <input type="hidden" name="product_id" id="product_id" value="{{ Product.id }}">
-                                    <button class="btn btn-success" id="receiver-cart-button" type="submit">注文へ進む</button>
-                                </form>
+                                {{ form_errors(cartForm.quantity) }}
+                                <button class="btn btn-success" data-toggle="modal" data-target="#cartModal">注文へ進む</button>
                             {% endif %}
                             </div>
                         </div>
@@ -336,22 +367,49 @@
         <div id="caption"></div>
     </div>
 
-
-    <div class="x-button hidden">&#10060</div>
-    <!-- Modal -->
-    <div class="modal-select-time clearfix hidden" id="confirm-stock">
-        {% set ProductRDs = Product.ProductReceiptableDates %}
-        {% for ProductRD in ProductRDs %}
-        <div class="count-modal">
-            <div class="float-left">
-                <p>
-                    <span class="count-date">{{ ProductRD.date|date('m月d日') }}({{ ProductRD.ReceiptableDate.name }})
-                        <label class="count-quality ">残り{{ ProductRD.max_quantity }}点</label>
-                    </span>
-                    <span class="count-price">小計：{{ (ProductRD.max_quantity|number_format * Product.getPrice02IncTaxMin|number_format)|price }}</span>
-                </p>
+    <div class="modal fade" id="cartModal" tabindex="-1" data-backdrop="static" data-keyboard="false" role="dialog" aria-labelledby="cartModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <form name="add-cart-form" id="add-cart-form" method="post" action="?">
+                    <input type="hidden" name="mode" value="add_cart"/>
+                    {{ form_widget(cartForm._token) }}
+                    {{ form_widget(cartForm.product_id) }}
+                    {{ form_widget(cartForm.product_class_id) }}
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="top:0px; right: 6px">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        {{ form_errors(cartForm.quantity) }}
+                        {% set ProductRDs = Product.ProductReceiptableDates %}
+                        {% for ProductRD in ProductRDs %}
+                            <div class="row">
+                                <div class="col-sm-12 col-xs-12 count-modal">
+                                    <div class="col-sm-8 col-xs-8 float-left">
+                                        <span class="count-date">{{ ProductRD.date|date('m月d日') }}({{ ProductRD.ReceiptableDate.name }})</span>
+                                        <label class="count-quality ">残り{{ ProductRD.max_quantity }}点</label>
+                                        <p class="count-price">小計：<span class="modal-price">0</span>円</p>
+                                    </div>
+                                    {% if is_granted("ROLE_RECIPIENT") %}
+                                    <div class="col-sm-4 col-xs-4 float-right count-right">
+                                        <img class="minus" src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/count-minus-inactive.svg">
+                                        <input type="number" min="0" step="1" max="{{ ProductRD.max_quantity }}" pattern="[0-9]*" class="count-number"
+                                               name="quantity[{{ ProductRD.date|date('Y/m/d') }}]" value="0">
+                                        <img class="plus" src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/count-plus-active.svg">
+                                    </div>
+                                    {% endif %}
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                    {% if is_granted("ROLE_RECIPIENT") %}
+                    <div class="modal-footer">
+                        <button id="order_button" class="btn btn-success" type="submit">注文票に追加する</button>
+                    </div>
+                    {% endif %}
+                </form>
             </div>
         </div>
-        {% endfor %}
     </div>
 {% endblock %}
