--- a/src/Eccube/Resource/template/default/Farm/farm_item_detail.twig
+++ b/src/Eccube/Resource/template/default/Farm/farm_item_detail.twig
@@ -304,7 +304,7 @@
                 {% endif %}
 
                 {% if CustomerVoice %}
-                    <div class="row">
+                    <div class="row" id="comment">
                         <div class="col-sm-12 col-xs-12">
                             {% for Voice in CustomerVoice %}
                                 <div class="div-comment-profile clearfix">
