--- a/src/Eccube/Resource/template/admin/Schedule/index.twig
+++ b/src/Eccube/Resource/template/admin/Schedule/index.twig
@@ -115,8 +115,8 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                                                 <td>{{ RouteDetail.move_time }}</td>
                                                 <td>{{ RouteDetail.BusStop.BusArea.name }}</td>
                                                 <td>{{ RouteDetail.BusStop.name }}</td>
-                                                <td>2</td>
-                                                <td>2</td>
+                                                <td>{{ RouteDetail.total_amount }}</td>
+                                                <td>{{ RouteDetail.total_farmer_amount }}</td>
                                                 <td>4</td>
                                                 <td>50%</td>
                                             </tr>
