--- a/src/Eccube/Resource/template/default/Driver/driver_home.twig
+++ b/src/Eccube/Resource/template/default/Driver/driver_home.twig
@@ -79,6 +79,9 @@
             text-align: left;
             color: #222222;
         }
+        #driver-wrapper {
+            min-height: 600px;
+        }
     </style>
 {% endblock stylesheet %}
 
@@ -88,105 +91,56 @@
             <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-menu.svg" class="hambuger-menu-reicever">
             <a href="{{ url('top') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="logo-svg"></a>
         </div>
+        {% if BusSchedule|length > 0 %}
         <div class="row">
             <div class="col-sm-12 col-xs-12 wrapper" id="driver-wrapper">
                 <div class="header-bottom">
                     <div class="ml39">
-                        <span class="layer-big">1号車 東ルート</span>
+                        <span class="layer-big">{{ bus_no }}号車 {{ route_name }}</span>
                     </div>
                     <div class="layer-tiny text-align-right">
-                        <span>明日の運行 〉</span>
+                        <a href="{{ url('driver_home_tomorrow') }}"><span>明日の運行 〉</span></a>
                     </div>
                     <div class="ml42">
-                        <span class="layer-small">2017年12月23日</span>
+                        <span class="layer-small">{{ today }}</span>
                     </div>
                 </div>
 
-                <div class="rectangle-content">
-                    <div class="rectangle-title">
-                        <span class="text-left">全日繰越分</span>
-                        <span class="text-center">バス停A</span>
+                {% for Bus in BusSchedule %}
+                    <div class="rectangle-content">
+                        <div class="rectangle-title">
+                            <span class="text-left">{{ Bus.move_time }}</span>
+                            <span class="text-center">{{ Bus.name }}</span>
+                        </div>
+                        <div class="rectangle-detail">
+                            <span class="text-tiny">配荷数</span>
+                            <span class="text-center">{{ Bus.total_amount }}</span>
+                            <span class="text-tiny ml30p">集荷数</span>
+                            <span class="text-center">{{ Bus.farmer_total_amount }}</span>
+                            <span class="text-tiny ml30p">積載率</span>
+                            <span class="text-center">50%</span>
+                        </div>
                     </div>
-                    <div class="rectangle-detail">
-                        <span class="text-tiny">配荷数</span>
-                        <span class="text-center">10</span>
-                        <span class="text-tiny ml30p">集荷数</span>
-                        <span class="text-center">10</span>
-                        <span class="text-tiny ml30p">積載率</span>
-                        <span class="text-center">20%</span>
-                    </div>
-                </div>
-                <div class="rectangle-content">
-                    <div class="rectangle-title">
-                        <span class="text-left">10:00</span>
-                        <span class="text-center">バス停B</span>
-                    </div>
-                    <div class="rectangle-detail">
-                        <span class="text-tiny">配荷数</span>
-                        <span class="text-center">10</span>
-                        <span class="text-tiny ml30p">集荷数</span>
-                        <span class="text-center">10</span>
-                        <span class="text-tiny ml30p">積載率</span>
-                        <span class="text-center">20%</span>
-                    </div>
-                </div>
-                <div class="rectangle-content">
-                    <div class="rectangle-title">
-                        <span class="text-left">12:00</span>
-                        <span class="text-center">バス停C</span>
-                    </div>
-                    <div class="rectangle-detail">
-                        <span class="text-tiny">配荷数</span>
-                        <span class="text-center">10</span>
-                        <span class="text-tiny ml30p">集荷数</span>
-                        <span class="text-center">10</span>
-                        <span class="text-tiny ml30p">積載率</span>
-                        <span class="text-center">20%</span>
-                    </div>
-                </div>
-                <div class="rectangle-content">
-                    <div class="rectangle-title">
-                        <span class="text-left">14:00</span>
-                        <span class="text-center">バス停D</span>
-                    </div>
-                    <div class="rectangle-detail">
-                        <span class="text-tiny">配荷数</span>
-                        <span class="text-center">10</span>
-                        <span class="text-tiny ml30p">集荷数</span>
-                        <span class="text-center">10</span>
-                        <span class="text-tiny ml30p">積載率</span>
-                        <span class="text-center">20%</span>
-                    </div>
-                </div>
-                <div class="rectangle-content">
-                    <div class="rectangle-title">
-                        <span class="text-left">16:00</span>
-                        <span class="text-center">バス停E</span>
-                    </div>
-                    <div class="rectangle-detail">
-                        <span class="text-tiny">配荷数</span>
-                        <span class="text-center">10</span>
-                        <span class="text-tiny ml30p">集荷数</span>
-                        <span class="text-center">10</span>
-                        <span class="text-tiny ml30p">積載率</span>
-                        <span class="text-center">20%</span>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
+        {% else %}
+            <div id="list_box" class="box-body no-padding">
+                <div id="list_box__not_find_Bus" class="data-empty"><svg class="cb cb-inbox"> <use xlink:href="#cb-inbox" /></svg><p class="text-center" style="text-align: center">データはありません</p></div>
+            </div><!-- /.box-body -->
+        {% endif %}
     </div>
 
     <div id="reicever-menu-wrapper" class="menu-wrapper hidden">
         <div class="Rectangle">
             <ul class="list-group" id="main-menu">
+                {% if is_granted("IS_AUTHENTICATED_FULLY") %}
                 <li class="list-group-item li-profile">
-                    {#{% if TargetCustomer.profile_image %}#}
-                        {#{% set img = app.config.image_save_urlpath ~'/'~ TargetCustomer.profile_image %}#}
-                    {#{% endif %}#}
-                    {#<img id="upload-image" src="{{ img }}" alt="profile" class="img-circle small-profile">#}
-                    {#<span class="profile-name">{{ TargetCustomer.__toString }}</span>#}
-                    {#<span class="button-x">X</span>#}
+                    <img id="upload-image" src="{{ app.config.image_save_urlpath }}/{{ app.user.profile_image|no_image_product }}" alt="profile" class="img-circle small-profile">
+                    <span class="profile-name">{{ app.user.__toString }}</span>
+                    <span class="button-x">X</span>
                 </li>
+                {% endif %}
                 <li class="list-group-item"><a href="{{ url('contact') }}">お問い合わせ</a></li>
             </ul>
         </div>
