--- a/src/Eccube/Resource/template/default/Cart/complete.twig
+++ b/src/Eccube/Resource/template/default/Cart/complete.twig
@@ -6,6 +6,14 @@
  #}{% extends 'default_frame.twig' %}
 {% set body_class = ' ' %}
 {% block stylesheet %}
+    <style type="text/css">
+        p.color222 {
+            padding-top: 50px;
+        }
+        #cart-done-button {
+            width: 96% !important;
+        }
+    </style>
 {% endblock stylesheet %}
 {% block javascript %}
 {% endblock javascript %}
